server/src/main/java/cn/ouctechnology/oodb/parser/OQLParser.java
// Generated from D:/杂乱文件终章/oodb/server/src/test/java\OQL.g4 by ANTLR 4.7
package cn.ouctechnology.oodb.parser;

import cn.ouctechnology.oodb.exception.ParseException;
import cn.ouctechnology.oodb.execute.*;
import cn.ouctechnology.oodb.reocrd.Tuple;
import cn.ouctechnology.oodb.transcation.Transaction;
import cn.ouctechnology.oodb.util.OgnlUtil;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.ArrayList;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class OQLParser extends Parser {
    static {
        RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION);
    }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    public static final int
            SELECT = 1, CREATE = 2, UPDATE = 3, DELETE = 4, INSERT = 5, FROM = 6, AS = 7, LEFT = 8,
            RIGHT = 9, OUTER = 10, JOIN = 11, INNER = 12, DISTINCT = 13, OBJECT = 14, NEW = 15,
            AVG = 16, SUM = 17, MAX = 18, MIN = 19, COUNT = 20, WHERE = 21, GROUP = 22, BY = 23, ORDER = 24,
            HAVING = 25, DESC = 26, ASC = 27, NOT = 28, SET = 29, BETWEEN = 30, IS = 31, NULL = 32,
            ESCAPE = 33, AND = 34, OR = 35, LIKE = 36, IN = 37, INTO = 38, VALUES = 39, PRIMARY = 40,
            KEY = 41, LISTOF = 42, EXTENDS = 43, EMPTY = 44, MEMBER = 45, OF = 46, ALL = 47, ANY = 48,
            SOME = 49, INT = 50, FLOAT = 51, CHAR = 52, SETOF = 53, REF = 54, TABLE = 55, EXISTS = 56,
            AUTO_INCREMENT = 57, UNIQUE = 58, LIMIT = 59, DROP = 60, CASCADE = 61, ON = 62, SHOW = 63,
            TABLES = 64, FINAL = 65, INDEX = 66, SYNC = 67, BEGIN = 68, TRANSACTION = 69, COMMIT = 70,
            ROLL = 71, BACK = 72, ASSIGN = 73, UUID = 74, MUL = 75, DIV = 76, PLUS = 77, MINUS = 78,
            EQ = 79, GR = 80, LS = 81, GE = 82, LE = 83, NE = 84, DOT = 85, LBRACKET = 86, RBRACKET = 87,
            LFRACKET = 88, RFRACKET = 89, COMMA = 90, SEMI = 91, COLON = 92, TRIMCHARACTER = 93,
            STRINGLITERAL = 94, WORD = 95, NAMEDPARAMETER = 96, WS = 97, COMMENT = 98, LINECOMMENT = 99,
            ESCAPECHARACTER = 100, INTNUMERAL = 101, FLOATNUMERAL = 102;
    public static final int
            RULE_oqlStat = 0, RULE_selectStat = 1, RULE_selectClause = 2, RULE_selectExpr = 3,
            RULE_fromClause = 4, RULE_fromItem = 5, RULE_join = 6, RULE_pathExpr = 7,
            RULE_limitClause = 8, RULE_aggregateExpr = 9, RULE_aggregateExprFunctionName = 10,
            RULE_whereClause = 11, RULE_groupByClause = 12, RULE_havingClause = 13,
            RULE_orderByClause = 14, RULE_orderByItem = 15, RULE_conditionalExpr = 16,
            RULE_conditionalTerm = 17, RULE_conditionalFactor = 18, RULE_simpleCondExpr = 19,
            RULE_betweenExpr = 20, RULE_inExpr = 21, RULE_inExprRightPart = 22, RULE_inItem = 23,
            RULE_likeExpr = 24, RULE_comparisonExpr = 25, RULE_comparisonOperator = 26,
            RULE_arithmeticExpr = 27, RULE_simpleArithmeticExpr = 28, RULE_arithmeticTerm = 29,
            RULE_arithmeticFactor = 30, RULE_arithmeticPrimary = 31, RULE_stringExpr = 32,
            RULE_stringPrimary = 33, RULE_entityExpr = 34, RULE_listExpr = 35, RULE_stringLiteralExpr = 36,
            RULE_schemaName = 37, RULE_patternValue = 38, RULE_numericLiteral = 39,
            RULE_literal = 40, RULE_field = 41, RULE_id = 42, RULE_createStat = 43,
            RULE_tableName = 44, RULE_columnDefinition = 45, RULE_columnDefinitionItem = 46,
            RULE_columnType = 47, RULE_columnConstraint = 48, RULE_extendsTable = 49,
            RULE_tableConstraint = 50, RULE_updateStat = 51, RULE_updateClause = 52,
            RULE_updateItem = 53, RULE_newValue = 54, RULE_insertListExpr = 55, RULE_insertListItem = 56,
            RULE_insertEntityExpr = 57, RULE_insertEntityItem = 58, RULE_deleteStat = 59,
            RULE_deleteClause = 60, RULE_insertStat = 61, RULE_columnList = 62, RULE_insertValue = 63,
            RULE_dropStat = 64, RULE_showStat = 65, RULE_createIndexStat = 66, RULE_dropIndexStat = 67,
            RULE_syncStat = 68, RULE_beginTranStat = 69, RULE_commitStat = 70, RULE_rollBackStat = 71;
    public static final String[] ruleNames = {
            "oqlStat", "selectStat", "selectClause", "selectExpr", "fromClause", "fromItem",
            "join", "pathExpr", "limitClause", "aggregateExpr", "aggregateExprFunctionName",
            "whereClause", "groupByClause", "havingClause", "orderByClause", "orderByItem",
            "conditionalExpr", "conditionalTerm", "conditionalFactor", "simpleCondExpr",
            "betweenExpr", "inExpr", "inExprRightPart", "inItem", "likeExpr", "comparisonExpr",
            "comparisonOperator", "arithmeticExpr", "simpleArithmeticExpr", "arithmeticTerm",
            "arithmeticFactor", "arithmeticPrimary", "stringExpr", "stringPrimary",
            "entityExpr", "listExpr", "stringLiteralExpr", "schemaName", "patternValue",
            "numericLiteral", "literal", "field", "id", "createStat", "tableName",
            "columnDefinition", "columnDefinitionItem", "columnType", "columnConstraint",
            "extendsTable", "tableConstraint", "updateStat", "updateClause", "updateItem",
            "newValue", "insertListExpr", "insertListItem", "insertEntityExpr", "insertEntityItem",
            "deleteStat", "deleteClause", "insertStat", "columnList", "insertValue",
            "dropStat", "showStat", "createIndexStat", "dropIndexStat", "syncStat",
            "beginTranStat", "commitStat", "rollBackStat"
    };

    private static final String[] _LITERAL_NAMES = {
            null, null, null, null, null, null, null, null, null, null, null, null,
            null, null, null, null, null, null, null, null, null, null, null, null,
            null, null, null, null, null, null, null, null, null, null, null, null,
            null, null, null, null, null, null, null, null, null, null, null, null,
            null, null, null, null, null, null, null, null, null, null, null, null,
            null, null, null, null, null, null, null, null, null, null, null, null,
            null, null, null, "'*'", "'/'", "'+'", "'-'", "'='", "'>'", "'<'", "'>='",
            "'<='", null, "'.'", "'('", "')'", "'['", "']'", "','", "';'", "':'",
            "''.''"
    };
    private static final String[] _SYMBOLIC_NAMES = {
            null, "SELECT", "CREATE", "UPDATE", "DELETE", "INSERT", "FROM", "AS",
            "LEFT", "RIGHT", "OUTER", "JOIN", "INNER", "DISTINCT", "OBJECT", "NEW",
            "AVG", "SUM", "MAX", "MIN", "COUNT", "WHERE", "GROUP", "BY", "ORDER",
            "HAVING", "DESC", "ASC", "NOT", "SET", "BETWEEN", "IS", "NULL", "ESCAPE",
            "AND", "OR", "LIKE", "IN", "INTO", "VALUES", "PRIMARY", "KEY", "LISTOF",
            "EXTENDS", "EMPTY", "MEMBER", "OF", "ALL", "ANY", "SOME", "INT", "FLOAT",
            "CHAR", "SETOF", "REF", "TABLE", "EXISTS", "AUTO_INCREMENT", "UNIQUE",
            "LIMIT", "DROP", "CASCADE", "ON", "SHOW", "TABLES", "FINAL", "INDEX",
            "SYNC", "BEGIN", "TRANSACTION", "COMMIT", "ROLL", "BACK", "ASSIGN", "UUID",
            "MUL", "DIV", "PLUS", "MINUS", "EQ", "GR", "LS", "GE", "LE", "NE", "DOT",
            "LBRACKET", "RBRACKET", "LFRACKET", "RFRACKET", "COMMA", "SEMI", "COLON",
            "TRIMCHARACTER", "STRINGLITERAL", "WORD", "NAMEDPARAMETER", "WS", "COMMENT",
            "LINECOMMENT", "ESCAPECHARACTER", "INTNUMERAL", "FLOATNUMERAL"
    };
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "OQL.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public OQLParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    public static class OqlStatContext extends EnhancedParserRuleContext {
        public OqlStatContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_oqlStat;
        }

        public OqlStatContext() {
        }

        public void copyFrom(OqlStatContext ctx) {
            super.copyFrom(ctx);
        }

        public Object doExecute() {
            throw new UnsupportedOperationException("the method is not implement");
        }
    }

    public static class RollBackStatementContext extends OqlStatContext {
        public RollBackStatContext rollBackStat() {
            return getRuleContext(RollBackStatContext.class, 0);
        }

        public RollBackStatementContext(OqlStatContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public Object doExecute() {
            Transaction.rollback();
            return "roll back successfully";
        }
    }

    public static class BeginTranStatementContext extends OqlStatContext {
        public BeginTranStatContext beginTranStat() {
            return getRuleContext(BeginTranStatContext.class, 0);
        }

        public BeginTranStatementContext(OqlStatContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public Object doExecute() {
            Transaction.start();
            return "the transaction has started";
        }
    }

    public static class CreateStatementContext extends OqlStatContext {
        public CreateStatContext createStat() {
            return getRuleContext(CreateStatContext.class, 0);
        }

        public CreateStatementContext(OqlStatContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public Object doExecute() {
            CreateStatContext stat = this.createStat();
            return CreateExplain.getCreateExplain(stat).doCreate();
        }

    }

    public static class DeleteStatementContext extends OqlStatContext {
        public DeleteStatContext deleteStat() {
            return getRuleContext(DeleteStatContext.class, 0);
        }

        public DeleteStatementContext(OqlStatContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public Object doExecute() {
            DeleteStatContext deleteStatContext = this.deleteStat();
            return DeleteExplain.getDeleteExplain(deleteStatContext).doDelete();
        }
    }

    public static class InsertStatementContext extends OqlStatContext {
        public InsertStatContext insertStat() {
            return getRuleContext(InsertStatContext.class, 0);
        }

        public InsertStatementContext(OqlStatContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public Object doExecute() {
            InsertStatContext insertStatContext = this.insertStat();
            return InsertExplain.getInsertExplain(insertStatContext).doInsert();
        }
    }

    public static class CreateIndexStatementContext extends OqlStatContext {
        public CreateIndexStatContext createIndexStat() {
            return getRuleContext(CreateIndexStatContext.class, 0);
        }

        public CreateIndexStatementContext(OqlStatContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public Object doExecute() {
            CreateIndexStatContext indexStat = this.createIndexStat();
            return CreateIndexExplain.getCreateIndexExplain(indexStat).doCreate();
        }
    }

    public static class DropIndexStatementContext extends OqlStatContext {
        public DropIndexStatContext dropIndexStat() {
            return getRuleContext(DropIndexStatContext.class, 0);
        }

        public DropIndexStatementContext(OqlStatContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public Object doExecute() {
            DropIndexStatContext dropIndexStatContext = this.dropIndexStat();
            return DropIndexExplain.getDropIndexExplain(dropIndexStatContext).doDrop();
        }
    }

    public static class SyncStatementContext extends OqlStatContext {
        public SyncStatContext syncStat() {
            return getRuleContext(SyncStatContext.class, 0);
        }

        public SyncStatementContext(OqlStatContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public Object doExecute() {
            return SyncExplain.sync();
        }
    }

    public static class UpdateStatementContext extends OqlStatContext {
        public UpdateStatContext updateStat() {
            return getRuleContext(UpdateStatContext.class, 0);
        }

        public UpdateStatementContext(OqlStatContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public Object doExecute() {
            UpdateStatContext updateStatContext = this.updateStat();
            return UpdateExplain.getUpdateExplain(updateStatContext).doUpdate();
        }
    }

    public static class CommitStatementContext extends OqlStatContext {
        public CommitStatContext commitStat() {
            return getRuleContext(CommitStatContext.class, 0);
        }

        public CommitStatementContext(OqlStatContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public Object doExecute() {
            Transaction.commit();
            return "commit successfully";
        }
    }

    public static class SelectStatementContext extends OqlStatContext {
        public SelectStatContext selectStat() {
            return getRuleContext(SelectStatContext.class, 0);
        }

        public SelectStatementContext(OqlStatContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public Object doExecute() {
            SelectStatContext selectStatContext = this.selectStat();
            return SelectExplain.getSelectExplain(selectStatContext).doSelect();
        }

    }

    public static class DropStatementContext extends OqlStatContext {
        public DropStatContext dropStat() {
            return getRuleContext(DropStatContext.class, 0);
        }

        public DropStatementContext(OqlStatContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public Object doExecute() {
            DropStatContext dropStatContext = this.dropStat();
            return DropExplain.getDropStatContext(dropStatContext).doDrop();
        }
    }

    public static class ShowStatementContext extends OqlStatContext {
        public ShowStatContext showStat() {
            return getRuleContext(ShowStatContext.class, 0);
        }

        public ShowStatementContext(OqlStatContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public Object doExecute() {
            return ShowExplain.doShow();
        }
    }

    public final OqlStatContext oqlStat() throws RecognitionException {
        OqlStatContext _localctx = new OqlStatContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_oqlStat);
        try {
            setState(157);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 0, _ctx)) {
                case 1:
                    _localctx = new SelectStatementContext(_localctx);
                    enterOuterAlt(_localctx, 1);
                {
                    setState(144);
                    selectStat();
                }
                break;
                case 2:
                    _localctx = new CreateStatementContext(_localctx);
                    enterOuterAlt(_localctx, 2);
                {
                    setState(145);
                    createStat();
                }
                break;
                case 3:
                    _localctx = new InsertStatementContext(_localctx);
                    enterOuterAlt(_localctx, 3);
                {
                    setState(146);
                    insertStat();
                }
                break;
                case 4:
                    _localctx = new UpdateStatementContext(_localctx);
                    enterOuterAlt(_localctx, 4);
                {
                    setState(147);
                    updateStat();
                }
                break;
                case 5:
                    _localctx = new DeleteStatementContext(_localctx);
                    enterOuterAlt(_localctx, 5);
                {
                    setState(148);
                    deleteStat();
                }
                break;
                case 6:
                    _localctx = new DropStatementContext(_localctx);
                    enterOuterAlt(_localctx, 6);
                {
                    setState(149);
                    dropStat();
                }
                break;
                case 7:
                    _localctx = new ShowStatementContext(_localctx);
                    enterOuterAlt(_localctx, 7);
                {
                    setState(150);
                    showStat();
                }
                break;
                case 8:
                    _localctx = new CreateIndexStatementContext(_localctx);
                    enterOuterAlt(_localctx, 8);
                {
                    setState(151);
                    createIndexStat();
                }
                break;
                case 9:
                    _localctx = new DropIndexStatementContext(_localctx);
                    enterOuterAlt(_localctx, 9);
                {
                    setState(152);
                    dropIndexStat();
                }
                break;
                case 10:
                    _localctx = new SyncStatementContext(_localctx);
                    enterOuterAlt(_localctx, 10);
                {
                    setState(153);
                    syncStat();
                }
                break;
                case 11:
                    _localctx = new BeginTranStatementContext(_localctx);
                    enterOuterAlt(_localctx, 11);
                {
                    setState(154);
                    beginTranStat();
                }
                break;
                case 12:
                    _localctx = new CommitStatementContext(_localctx);
                    enterOuterAlt(_localctx, 12);
                {
                    setState(155);
                    commitStat();
                }
                break;
                case 13:
                    _localctx = new RollBackStatementContext(_localctx);
                    enterOuterAlt(_localctx, 13);
                {
                    setState(156);
                    rollBackStat();
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class SelectStatContext extends EnhancedParserRuleContext {
        public TerminalNode SELECT() {
            return getToken(OQLParser.SELECT, 0);
        }

        public SelectClauseContext selectClause() {
            return getRuleContext(SelectClauseContext.class, 0);
        }

        public FromClauseContext fromClause() {
            return getRuleContext(FromClauseContext.class, 0);
        }

        public TerminalNode DISTINCT() {
            return getToken(OQLParser.DISTINCT, 0);
        }

        public WhereClauseContext whereClause() {
            return getRuleContext(WhereClauseContext.class, 0);
        }

        public GroupByClauseContext groupByClause() {
            return getRuleContext(GroupByClauseContext.class, 0);
        }

        public OrderByClauseContext orderByClause() {
            return getRuleContext(OrderByClauseContext.class, 0);
        }

        public LimitClauseContext limitClause() {
            return getRuleContext(LimitClauseContext.class, 0);
        }

        public SelectStatContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_selectStat;
        }
    }

    public final SelectStatContext selectStat() throws RecognitionException {
        SelectStatContext _localctx = new SelectStatContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_selectStat);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(159);
                match(SELECT);
                setState(161);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == DISTINCT) {
                    {
                        setState(160);
                        match(DISTINCT);
                    }
                }

                setState(163);
                selectClause();
                setState(164);
                fromClause();
                setState(166);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == WHERE) {
                    {
                        setState(165);
                        whereClause();
                    }
                }

                setState(169);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == GROUP) {
                    {
                        setState(168);
                        groupByClause();
                    }
                }

                setState(172);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == ORDER) {
                    {
                        setState(171);
                        orderByClause();
                    }
                }

                setState(175);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == LIMIT) {
                    {
                        setState(174);
                        limitClause();
                    }
                }

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class SelectClauseContext extends EnhancedParserRuleContext {
        public List<SelectExprContext> selectExpr() {
            return getRuleContexts(SelectExprContext.class);
        }

        public SelectExprContext selectExpr(int i) {
            return getRuleContext(SelectExprContext.class, i);
        }

        public List<TerminalNode> COMMA() {
            return getTokens(OQLParser.COMMA);
        }

        public TerminalNode COMMA(int i) {
            return getToken(OQLParser.COMMA, i);
        }

        public SelectClauseContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_selectClause;
        }
    }
